--- a/00_HTML/css/estilos.css
+++ b/00_HTML/css/estilos.css
@@ -2,3 +2,21 @@
 body {
     background-image: url(../image/fondo.jpg);
 }
+nav{
+    max-width: 900px;
+    margin: auto;
+    background-color: #16404D;
+    font-size: 20px;
+    margin-top: 50px;
+}
+.menu-horizontal{
+    display: flex;
+    list-style: none; 
+    justify-content: space-around;
+}
+.menu-horizontal > li > a {
+    color: white;
+    text-decoration: none;
+    padding: 15px 20px;
+    display: block;
+}
